# autocar-erp_track

./: .gitignore  LICENSE  README.md  acados_ocp.json
c_generated_code/: Makefile  acados_sim_solver_spline_bicycle_model.c  acados_sim_solver_spline_bicycle_model.h  acados_solver.pxd  acados_solver_spline_bicycle_model.c  acados_solver_spline_bicycle_model.h  main_sim_spline_bicycle_model.c  main_spline_bicycle_model.c
c_generated_code/spline_bicycle_model_cost/: spline_bicycle_model_cost.h  spline_bicycle_model_cost_ext_cost_0_fun.c  spline_bicycle_model_cost_ext_cost_0_fun_jac.c  spline_bicycle_model_cost_ext_cost_0_fun_jac_hess.c  spline_bicycle_model_cost_ext_cost_e_fun.c  spline_bicycle_model_cost_ext_cost_e_fun_jac.c  spline_bicycle_model_cost_ext_cost_e_fun_jac_hess.c  spline_bicycle_model_cost_ext_cost_fun.c  spline_bicycle_model_cost_ext_cost_fun_jac.c  spline_bicycle_model_cost_ext_cost_fun_jac_hess.c
c_generated_code/spline_bicycle_model_model/: spline_bicycle_model_expl_ode_fun.c  spline_bicycle_model_expl_ode_hess.c  spline_bicycle_model_expl_vde_adj.c  spline_bicycle_model_expl_vde_forw.c  spline_bicycle_model_model.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/adaptive_clustering/lib/adaptive_clustering/: adaptive_clustering_ground_removed_node
install/adaptive_clustering/share/adaptive_clustering/: adaptive_clustering.launch.py  ground_removal_clustering.launch.py  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/adaptive_clustering/share/adaptive_clustering/cmake/: adaptive_clusteringConfig-version.cmake  adaptive_clusteringConfig.cmake  adaptive_clustering__rosidl_typesupport_cExport.cmake  adaptive_clustering__rosidl_typesupport_introspection_cExport.cmake  adaptive_clustering__rosidl_typesupport_introspection_cppExport-noconfig.cmake  adaptive_clustering__rosidl_typesupport_introspection_cppExport.cmake  ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_adaptive_clustering__rosidl_generator_cExport.cmake  export_adaptive_clustering__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  (+2 more)
install/autocar_utils/lib/autocar_utils/: autocar_util.py
install/autocar_utils/share/autocar_utils/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/delaunay_path_planning/lib/delaunay_path_planning/: bezier_example.py  delaunay_path_planning.py  local_path_planning.py  rubber_cone.py
install/delaunay_path_planning/share/delaunay_path_planning/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/erp_control/lib/erp_control/: erp42_ros.py  final_speed_pub.py
install/erp_control/share/erp_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/patchworkpp/include/patchworkpp/: patchworkpp.hpp  utils.hpp
install/patchworkpp/lib/patchworkpp/: demo  patchworkpp_comp_node
install/patchworkpp/share/patchworkpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/path_tracking/lib/path_tracking/: mpc  path_tracking
install/path_tracking/share/path_tracking/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/perception/lib/perception/: bbox_tracker  camera_pub  camera_sign  camera_traffic  combined_camera  lanenet  left_camera  object_tracker3D  obstacle  right_camera  rubber_visualizer  sensor_fusion_object  sensor_fusion_sign  sign  stopline_camera  stopline_detection  trafficlight
install/perception/share/perception/: package.sh  package.xml
log/: latest_build
src/control/erp_control/: CMakeLists.txt  package.xml
src/control/erp_control/erp_control/: __init__.py
src/control/erp_control/src/: erp42_ros.py
src/path_planning/delaunay_path_planning/: CMakeLists.txt
src/path_planning/delaunay_path_planning/delaunay_path_planning/: __init__.py
src/path_planning/delaunay_path_planning/src/: cone_simulator.py  local_path_planning.py
src/path_planning/delaunay_path_planning/src/CurvesGenerator/: bezier_path.py  dubins_path.py
src/path_tracking/: CMakeLists.txt  package.xml  setup.py
src/path_tracking/path_tracking/: acados_setting_sp.py  bicycle_model_sp.py  mpc_acados_sp.py
src/perception/adaptive_clustering/: CMakeLists.txt
src/perception/adaptive_clustering/launch/: adaptive_clustering.launch.py  ground_removal_clustering.launch.py
src/perception/adaptive_clustering/src/: adaptive_clustering.cpp  adaptive_clustering_ground_removed.cpp
src/perception/patchwork-plusplus-ros/: CMakeLists.txt
src/perception/patchwork-plusplus-ros/launch/: composable.launch.py
src/perception/perception_core/: package.xml  setup.py
src/perception/perception_core/launch/: lanenet.launch.py  obstacle.launch.py  rubber_track.launch.py  sign.launch.py  stopline.launch.py  traffic_light.launch.py
src/perception/perception_core/perception/: stopline_camera.py  stopline_detection.py
src/perception/perception_core/perception/sensor_fusion/: CMakeLists.txt  package.xml
src/perception/perception_core/perception/sensor_fusion/src/object/: sensor_fusion.py
src/perception/perception_core/perception/sensor_fusion/src/rubber/: sensor_fusion.py
src/perception/perception_core/perception/sensor_fusion/src/sign/: sensor_fusion.py  sensor_fusion_v3kcity.py
src/perception/perception_core/perception/sensor_fusion/src/sign/backup/: sensor_fusion_v2.py
src/utils/: CMakeLists.txt  package.xml
src/utils/autocar_utils/: __init__.py  utils.py
src/utils/autocar_utils/autocar_utils/: euler_from_quaternion.py  keyboard_input.py
(+168 files in other folders)
